AG-11197 fix options page menu paddings
Merge in EXTENSIONS/browser-extension from fix/AG-11197 to master

Squashed commit of the following:

commit 14431d75f3e435eccce6e998a7b462325194cb6c
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 16 12:34:04 2021 +0300

    fix options page menu paddings

--- a/Extension/src/pages/options/components/Nav/nav.pcss
+++ b/Extension/src/pages/options/components/Nav/nav.pcss
@@ -5,8 +5,7 @@
     padding: 24px 0;
 
     &__item {
-        padding: 9px 33px 9px 38px;
-        margin-bottom: 16px;
+        padding: 16px 33px;
         line-height: 22px;
         color: var(--gray-base);
         text-decoration: none;
